--- a/Frontend/parth-traders/src/app/admin/product/product.component.html
+++ b/Frontend/parth-traders/src/app/admin/product/product.component.html
@@ -69,26 +69,77 @@
                     <th
                       scope="col"
                       class="table-header"
-                      data-name="abbrivation"
+                      data-name="product-type"
                     >
-                      productDescription
+                      Product Type
+                    </th>
+                    <th
+                      scope="col"
+                      class="table-header"
+                      data-name="product-description"
+                    >
+                      Product Description
+                    </th>
+                    <th
+                      scope="col"
+                      class="table-header"
+                      data-name="supplier-name"
+                    >
+                      Supplier Name
+                    </th>
+                    <th
+                      scope="col"
+                      class="table-header"
+                      data-name="category-name"
+                    >
+                      Category Name
+                    </th>
+                    <th
+                      scope="col"
+                      class="table-header"
+                      data-name="pieces-per-unit"
+                    >
+                      Pieces In 1 Unit
+                    </th>
+                    <th
+                      scope="col"
+                      class="table-header"
+                      data-name="single-piece-MRP"
+                    >
+                      Price For 1 Piece
+                    </th>
+                    <th scope="col" class="table-header" data-name="unit-price">
+                      Unit Price
+                    </th>
+                    <th scope="col" class="table-header" data-name="discount">
+                      Discount
+                    </th>
+                    <th
+                      scope="col"
+                      class="table-header"
+                      data-name="units-in-stocks"
+                    >
+                      Units Left In Stocks
                     </th>
                     <th scope="col">Actions</th>
                   </tr>
                 </thead>
 
                 <tbody id="productData">
-                  <tr
-                    *ngFor="
-                      let product of currentPageData$ | async;
-                      let i = index
-                    "
-                  >
+                  <tr *ngFor="let product of products$ | async; let i = index">
                     <th scope="col">
                       {{ pageSize * selectedPageNumber + i + 1 }}
                     </th>
                     <td>{{ product.productName }}</td>
+                    <td>{{ ProductType[product.productType] }}</td>
                     <td>{{ product.productDescription }}</td>
+                    <td>{{ product.supplierName }}</td>
+                    <td>{{ product.categoryName }}</td>
+                    <td>{{ product.piecesPerUnit }}</td>
+                    <td>{{ product.singlePieceMRP }}</td>
+                    <td>{{ product.unitPrice }}</td>
+                    <td>{{ product.discount }}</td>
+                    <td>{{ product.unitsInStock }}</td>
                     <td>
                       <a class="ms-2" (click)="openUpdateProductModal(product)"
                         ><i class="material-icons">border_color</i></a
@@ -104,46 +155,6 @@
               </table>
             </div>
           </div>
-          <!-- pagination section -->
-          <div class="row justify-content-center">
-            <div class="col-9">
-              <nav aria-label=" navigation example mx-auto">
-                <ul class="pagination justify-content-center">
-                  <li
-                    class="page-item page-list"
-                    (click)="
-                      selectedPageNumber > 0 &&
-                        onPageChange(selectedPageNumber - 1)
-                    "
-                  >
-                    <a class="page-link" aria-label="Previous">
-                      <span aria-hidden="true">&laquo; Previous</span>
-                    </a>
-                  </li>
-                  <li
-                    class="page-item list-item"
-                    *ngFor="let page of totalPages"
-                    [ngClass]="page == selectedPageNumber ? 'active' : ''"
-                    (click)="onPageChange(page)"
-                  >
-                    <a class="page-link"> {{ page + 1 }}</a>
-                  </li>
-                  <li
-                    class="page-item"
-                    (click)="
-                      selectedPageNumber < totalPages.length - 1 &&
-                        onPageChange(selectedPageNumber + 1)
-                    "
-                  >
-                    <a class="page-link" aria-label="Next">
-                      <span aria-hidden="true">Next &raquo;</span>
-                    </a>
-                  </li>
-                </ul>
-              </nav>
-            </div>
-          </div>
-          <!-- //// -->
         </div>
       </div>
     </div>
