--- a/Frontend/parth-traders/src/app/admin/admin.component.html
+++ b/Frontend/parth-traders/src/app/admin/admin.component.html
@@ -1,1 +1,6 @@
-<app-product></app-product>
+<main class="home-content">
+  <div class="position-relative">
+    <app-header></app-header>
+    <router-outlet></router-outlet>
+  </div>
+</main>
