--- a/Frontend/parth-traders/src/app/admin/product/product.component.css
+++ b/Frontend/parth-traders/src/app/admin/product/product.component.css
@@ -20,7 +20,7 @@ li {
 }
 
 .primary-color {
-  background-color: var(--primary-color);
+  background-color: #3a57e8;
   border: none;
 }
 
@@ -32,7 +32,7 @@ li {
 .search-box button {
   display: flex;
   padding: 10.5px 10px;
-  background: var(--primary-color);
+  background: #3a57e8; /*var(--primary-color);*/
   color: #fff;
   font-size: 17px;
   border: none;
@@ -72,7 +72,7 @@ th {
 }
 
 .page-item.active .page-link {
-  background-color: var(--primary-color);
+  background-color: #3a57e8; /*var(--primary-color);*/
 }
 
 ::placeholder {
