--- a/Frontend/parth-traders/src/app/admin/header/header.component.css
+++ b/Frontend/parth-traders/src/app/admin/header/header.component.css
@@ -9,6 +9,10 @@ body {
 nav {
   background-color: #ffffff;
   width: 100%;
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  box-shadow: #000 10px 10px 10px;
 }
 
 #navbarSupportedContent {
