--- a/Frontend/parth-traders/src/app/admin/header/header.component.html
+++ b/Frontend/parth-traders/src/app/admin/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="nav navbar navbar-expand-lg navbar-light iq-navbar pt-3 d-flex">
-  <div class="container-fluid d-flex iq-navbar">
+  <div class="container d-flex">
     <a
       class="home-link navbar-brand float-left d-flex align-items-center mb-md-0 me-md-auto text-decoration-none"
       routerLink="home"
@@ -58,5 +58,14 @@
         </li>
       </ul>
     </div>
+    <mat-expansion-panel hideToggle>
+      <mat-expansion-panel-header>
+        <mat-panel-title> This is the expansion title </mat-panel-title>
+        <mat-panel-description>
+          This is a summary of the content
+        </mat-panel-description>
+      </mat-expansion-panel-header>
+      <p>This is the primary content of the panel.</p>
+    </mat-expansion-panel>
   </div>
 </nav>
