used angular icons

--- a/Frontend/parth-traders/src/app/admin/product/product.component.html
+++ b/Frontend/parth-traders/src/app/admin/product/product.component.html
@@ -15,7 +15,11 @@
                 autocomplete="off"
               />
               <button type="submit" id="searchButton">
-                <i class="fa fa-search"></i>
+                <mat-icon
+                  aria-hidden="false"
+                  aria-label="search icon"
+                  fontIcon="search"
+                ></mat-icon>
               </button>
             </form>
             <div class="suggestions scrollable"></div>
