--- a/Frontend/parth-traders/src/app/admin/header/header.component.html
+++ b/Frontend/parth-traders/src/app/admin/header/header.component.html
@@ -20,10 +20,10 @@
       aria-expanded="false"
       aria-label="Toggle navigation"
     >
-      <span class="navbar-toggler-icon">
-        <span class="mt-2 navbar-toggler-bar bar1"></span>
-        <span class="navbar-toggler-bar bar2"></span>
-        <span class="navbar-toggler-bar bar3"></span>
+      <span
+        class="navbar-toggler-icon d-flex justify-content-start align-items-center"
+      >
+        <i class="fas fa-bars"></i>
       </span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
