--- a/Frontend/parth-traders/src/app/admin/header/header.component.html
+++ b/Frontend/parth-traders/src/app/admin/header/header.component.html
@@ -10,55 +10,16 @@
       <img src="../../assets/images/parth-traders-logo.jpg" />
       <h4 class="logo-title">Parth Traders</h4>
     </a>
-
-    <button
-      class="navbar-toggler float-right"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
-      <span
-        class="navbar-toggler-icon d-flex justify-content-start align-items-center"
-      >
-        <i class="fas fa-bars"></i>
-      </span>
+    <button mat-button [matMenuTriggerFor]="belowMenu">
+      <mat-icon>account_circle</mat-icon>admin name
     </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul
-        class="mb-2 navbar-nav ms-auto align-items-md-end align-items-sm-end navbar-list mb-lg-0"
-      >
-        <li class="nav-item dropdown">
-          <a
-            class="py-0 nav-link d-flex align-items-center"
-            id="navbarDropdown"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-          >
-            <img src="../../assets/images/user.png" />
-            <div class="caption d-none d-md-block d-sm-block">
-              <h6 class="mb-0 caption-title">Admin Name</h6>
-            </div>
-          </a>
-          <ul
-            class="dropdown-menu dropdown-menu-end"
-            aria-labelledby="navbarDropdown"
-          >
-            <li>
-              <a class="dropdown-item" routerLink="home">Profile</a>
-            </li>
-
-            <li>
-              <hr class="dropdown-divider" />
-            </li>
-            <li>
-              <a class="dropdown-item" routerLink="home">Logout</a>
-            </li>
-          </ul>
-        </li>
-      </ul>
-    </div>
+    <mat-menu #belowMenu="matMenu" yPosition="below">
+      <button mat-menu-item>
+        <a class="dropdown-item" routerLink="home">Profile</a>
+      </button>
+      <button mat-menu-item>
+        <a class="dropdown-item" routerLink="home">Logout</a>
+      </button>
+    </mat-menu>
   </div>
 </nav>
