--- a/Frontend/parth-traders/src/app/admin/product/product.component.css
+++ b/Frontend/parth-traders/src/app/admin/product/product.component.css
@@ -11,16 +11,24 @@
   margin-left: 5px;
 }
 
-.cancel-btn-margin {
-  margin-left: -0.2rem;
+mat-card {
+  box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%),
+    0px -1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%) !important;
 }
 
-/* body {
-  background-color: #72bdef21;
-} */
+.mat-header-row {
+  margin-top: 5px;
+  background-color: #3a57e8;
+}
 
-li {
-  list-style-type: none;
+.mat-header-cell {
+  font-size: 16px;
+  color: #fff;
+  font-family: Arial, Helvetica, Verdana;
+}
+
+.mat-row:hover {
+  background-color: #e8e8e8;
 }
 
 .primary-color {
@@ -73,18 +81,6 @@ th {
 .row {
   margin-top: 5px;
   margin-right: 0px;
-}
-
-.page-item.active .page-link {
-  background-color: #3a57e8; /*var(--primary-color);*/
-}
-
-::placeholder {
-  margin-left: 3px;
-}
-
-#myTable thead {
-  cursor: pointer;
 }
 
 .suggestions {
