--- a/Frontend/parth-traders/src/app/admin/product/product.component.html
+++ b/Frontend/parth-traders/src/app/admin/product/product.component.html
@@ -59,7 +59,7 @@
               </div>
             </div>
           </div>
-          <table mat-table [dataSource]="products" class="w-100 mt-2">
+          <table mat-table [dataSource]="dataSource" class="w-100 mt-2">
             <ng-container
               *ngFor="let column of columns"
               [matColumnDef]="column.columnDef"
@@ -71,10 +71,28 @@
                 {{ column.cell(row) }}
               </td>
             </ng-container>
+            <ng-container matColumnDef="position">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header>Num.</th>
+              <td mat-cell *matCellDef="let row; let i = index">
+                {{
+                  this.paginator.pageIndex == 0
+                    ? i + 1
+                    : 1 + i + this.paginator.pageIndex * this.paginator.pageSize
+                }}
+              </td>
+            </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
           </table>
+          <mat-paginator
+            #paginator
+            [length]="dataLength"
+            [pageSize]="5"
+            [pageSizeOptions]="[5, 10, 25, 100]"
+            aria-label="Select page"
+          >
+          </mat-paginator>
         </mat-card-content>
       </mat-card>
     </div>
