--- a/Frontend/parth-traders/src/app/admin/product/product.component.css
+++ b/Frontend/parth-traders/src/app/admin/product/product.component.css
@@ -34,6 +34,16 @@
   transform: translateY(-1px);
 }
 
+:host ::ng-deep .mat-sort-header-container {
+  display: flex;
+  justify-content: center;
+}
+
+th.mat-header-cell,
+td.mat-cell {
+  text-align: center;
+}
+
 #search {
   border-radius: 5px 0px 0px 5px;
 }
