--- a/Frontend/parth-traders/src/app/admin/product/product.component.html
+++ b/Frontend/parth-traders/src/app/admin/product/product.component.html
@@ -8,14 +8,20 @@
         <mat-card-content>
           <div class="row justify-content-between">
             <div class="col-2 col-md-2 pe-0">
-              <form class="d-flex form-inline search-box">
+              <form
+                #filter="ngForm"
+                class="d-flex form-inline search-box"
+                (submit)="applyFilter(filter.value)"
+              >
                 <input
+                  name="searchValue"
                   id="search"
                   class="form-control"
                   type="search"
                   placeholder="Search..."
                   aria-label="Search"
                   autocomplete="off"
+                  ngModel
                 />
                 <button type="submit" id="searchButton" class="p-2">
                   <mat-icon
@@ -25,7 +31,6 @@
                   ></mat-icon>
                 </button>
               </form>
-              <div class="suggestions scrollable"></div>
             </div>
 
             <div class="col-5 ps-0">
@@ -59,29 +64,24 @@
               </div>
             </div>
           </div>
-          <table mat-table [dataSource]="dataSource" class="w-100 mt-2">
+          <table
+            mat-table
+            [dataSource]="dataSource"
+            matSort
+            (matSortChange)="announceSortChange($event)"
+            class="w-100 mt-2"
+          >
             <ng-container
               *ngFor="let column of columns"
               [matColumnDef]="column.columnDef"
             >
-              <th mat-header-cell *matHeaderCellDef>
+              <th mat-header-cell *matHeaderCellDef mat-sort-header>
                 {{ column.header }}
               </th>
               <td mat-cell *matCellDef="let row">
                 {{ column.cell(row) }}
               </td>
             </ng-container>
-            <ng-container matColumnDef="position">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header>Num.</th>
-              <td mat-cell *matCellDef="let row; let i = index">
-                {{
-                  this.paginator.pageIndex == 0
-                    ? i + 1
-                    : 1 + i + this.paginator.pageIndex * this.paginator.pageSize
-                }}
-              </td>
-            </ng-container>
-
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
           </table>
