--- a/Frontend/parth-traders/src/app/admin/product/product.component.html
+++ b/Frontend/parth-traders/src/app/admin/product/product.component.html
@@ -68,8 +68,7 @@
             mat-table
             [dataSource]="dataSource"
             matSort
-            (matSortChange)="announceSortChange($event)"
-            class="w-100 mt-2"
+            class="w-100 mt-2 white-arrow"
           >
             <ng-container
               *ngFor="let column of columns"
