--- a/Frontend/parth-traders/src/app/admin/product/product.component.css
+++ b/Frontend/parth-traders/src/app/admin/product/product.component.css
@@ -12,7 +12,7 @@
 }
 
 .pushable {
-  background: #3a5dffff;
+  background: #001da6;
   border-radius: 12px;
   border: none;
   padding: 0;
@@ -30,7 +30,7 @@
   transform: translateY(-5px);
 }
 
-.pushable:active .front {
+.pushable:hover .front {
   transform: translateY(-1px);
 }
 
