--- a/Frontend/parth-traders/src/app/admin/add-product/add-product.component.html
+++ b/Frontend/parth-traders/src/app/admin/add-product/add-product.component.html
@@ -1,1 +1,62 @@
-<p>add-product works!</p>
+<div class="modal-header">
+  <h2 class="mt-2">{{ product ? "Update" : "Add" }} Product</h2>
+</div>
+<form
+  class="form-design ps-4 pe-4 pb-3"
+  #form="ngForm"
+  (ngSubmit)="addProduct(form)"
+>
+  <div class="row mt-3">
+    <label for="product-name" class="form-label">Name</label>
+    <input
+      type="text"
+      class="form-control"
+      id="product-name"
+      placeholder="productName"
+      required
+      [ngModel]="product?.productName"
+      name="productName"
+    />
+  </div>
+  <div class="row mt-3">
+    <mat-select>
+      <mat-option
+        *ngFor="let type of productType | keyvalue"
+        [value]="type.value"
+        >{{ type.value }}</mat-option
+      >
+    </mat-select>
+    <label for="productType" class="form-label">Product Type</label>
+    <input
+      type="text"
+      class="form-control"
+      id="productType"
+      required
+      [ngModel]="product?.productType"
+      name="productType"
+    />
+  </div>
+</form>
+
+<div class="modal-footer">
+  <div>
+    <button
+      type="submit"
+      class="btn btn-primary text-light"
+      [disabled]="!form.valid"
+      (click)="
+        product ? updateProduct(form, product) : addProduct(form); closeModal()
+      "
+    >
+      {{ product ? "Update" : "Add" }}
+    </button>
+    <button
+      type="reset"
+      class="btn btn-danger cancel-button text-light"
+      id="cancel"
+      (click)="closeModal()"
+    >
+      Cancel
+    </button>
+  </div>
+</div>
