--- a/Frontend/parth-traders/src/app/admin/add-product/add-product.component.html
+++ b/Frontend/parth-traders/src/app/admin/add-product/add-product.component.html
@@ -1,11 +1,7 @@
 <div class="modal-header">
   <h2 class="mt-2">{{ product ? "Update" : "Add" }} Product</h2>
 </div>
-<form
-  class="form-design ps-4 pe-4 pb-3"
-  #form="ngForm"
-  (ngSubmit)="addProduct(form)"
->
+<form class="form-design ps-4 pe-4 pb-3" #form="ngForm">
   <div class="row mt-3">
     <label for="product-name" class="form-label">Name</label>
     <input
@@ -134,7 +130,6 @@
 <div class="modal-footer">
   <div>
     <button
-      type="submit"
       class="btn btn-primary text-light"
       [disabled]="!form.valid"
       (click)="
