--- a/Frontend/parth-traders/src/styles.css
+++ b/Frontend/parth-traders/src/styles.css
@@ -1,6 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
+body::-webkit-scrollbar {
+  width: 1em;
+}
+
+body::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+body::-webkit-scrollbar-thumb {
+  border: 5px solid transparent;
+  border-radius: 100px;
+  background-color: #0563bb;
+  background-clip: content-box;
+}
+
 .cdk-global-overlay-wrapper,
 .cdk-overlay-container {
   z-index: 9999 !important;
