--- a/Frontend/parth-traders/src/app/admin/product/product.component.html
+++ b/Frontend/parth-traders/src/app/admin/product/product.component.html
@@ -77,8 +77,18 @@
               <th mat-header-cell *matHeaderCellDef mat-sort-header>
                 {{ column.header }}
               </th>
-              <td mat-cell *matCellDef="let row">
+              <td
+                mat-cell
+                *matCellDef="let row"
+                [matMenuTriggerFor]="belowMenu"
+              >
                 {{ column.cell(row) }}
+                <mat-menu #belowMenu="matMenu" yPosition="below">
+                  <button mat-menu-item (click)="openUpdateProductModal(row)">
+                    Update
+                  </button>
+                  <button mat-menu-item>Delete</button>
+                </mat-menu>
               </td>
             </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
