--- a/Frontend/parth-traders/src/app/admin/header/header.component.css
+++ b/Frontend/parth-traders/src/app/admin/header/header.component.css
@@ -21,8 +21,19 @@
   align-items: flex-end;
 }
 
+a:hover {
+  color: #000;
+  border-bottom: #7387ee5d 3px solid;
+}
+
+.active,
+a:hover.active {
+  color: #000;
+  border-bottom: #3a57e8 3px solid;
+}
+
 .home-link img {
-  width: 20%;
+  width: 5rem;
 }
 
 .logo-title {
@@ -34,19 +45,6 @@
   text-transform: capitalize;
   padding: 0.625rem;
   padding-left: 1rem;
-}
-
-.nav-link.active:hover {
-  color: #ffffff !important;
-}
-
-.nav-link.active {
-  background-color: var(--primary-color);
-  box-shadow: 0 10px 20px -10px rgba(var(--primary-color), 0.4);
-  color: #ffffff !important;
-  display: flex;
-  white-space: nowrap;
-  border-radius: 5px;
 }
 
 .home-header {
