created ad-category component and refactored style and set file structure

--- a/Frontend/parth-traders/src/app/admin/category/category.component.css
+++ b/Frontend/parth-traders/src/app/admin/category/category.component.css
@@ -57,8 +57,7 @@ td.mat-cell {
 }
 
 mat-card {
-  box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%),
-    0px -1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%) !important;
+  box-shadow: 0 2px 13px #e8eaec !important;
 }
 
 .mat-header-row {
