--- a/Frontend/parth-traders/src/app/admin/header/header.component.css
+++ b/Frontend/parth-traders/src/app/admin/header/header.component.css
@@ -4,7 +4,6 @@
 
 .nav {
   width: 100%;
-  z-index: 9999;
   position: fixed;
   background: #fff;
 }
@@ -16,13 +15,13 @@
   position: fixed;
 }
 
-a:hover {
+.nav-item > a:hover {
   color: #000;
   border-bottom: #7387ee5d 3px solid;
 }
 
 .active,
-a:hover.active {
+.nav-item > a:hover.active {
   color: #000;
   border-bottom: #3a57e8 3px solid;
 }
