created add-supplier components

--- a/Frontend/parth-traders/src/app/admin/category/add-category/add-category.component.html
+++ b/Frontend/parth-traders/src/app/admin/category/add-category/add-category.component.html
@@ -9,7 +9,7 @@
         type="text"
         class="form-control"
         id="category-name"
-        placeholder="e.g Belt"
+        placeholder="e.g Buff"
         required
         [ngModel]="category?.categoryName"
         name="categoryName"
@@ -23,7 +23,7 @@
         type="text"
         class="form-control"
         id="category-description"
-        placeholder="e.g This is v-belt"
+        placeholder="e.g This is buff."
         required
         [ngModel]="category?.categoryDescription"
         name="categoryDescription"
