Initialize sign in component

--- a/Frontend/parth-traders/src/app/admin/admin.component.html
+++ b/Frontend/parth-traders/src/app/admin/admin.component.html
@@ -1,6 +1,8 @@
 <main class="home-content">
   <div class="position-relative">
-    <app-header></app-header>
+    <ng-container *ngIf="IsUserLogin">
+      <app-header></app-header>
+    </ng-container>
     <router-outlet></router-outlet>
   </div>
 </main>
