--- a/Frontend/parth-traders/src/app/admin/log-in/log-in.component.html
+++ b/Frontend/parth-traders/src/app/admin/log-in/log-in.component.html
@@ -6,32 +6,32 @@
     <div class="col-5 col-md-5">
       <div class="panel-body">
         <form #form="ngForm">
-          <fieldset>
-            <div class="form-group">
-              <input
-                class="form-control"
-                placeholder="Email"
-                name="email"
-                type="email"
-                autofocus
-              />
-            </div>
-            <div class="form-group">
-              <input
-                class="form-control"
-                placeholder="Password"
-                name="password"
-                type="password"
-                value=""
-              />
-            </div>
-            <button
-              class="btn btn-lg btn-primary btn-block"
-              (click)="login(form)"
-            >
-              Login
-            </button>
-          </fieldset>
+          <div class="group">
+            <input
+              class="form-control"
+              placeholder="username"
+              name="username"
+              type="text"
+              autofocus
+              ngModel
+            />
+          </div>
+          <div class="group">
+            <input
+              class="form-control"
+              placeholder="Password"
+              name="password"
+              type="password"
+              value=""
+              ngModel
+            />
+          </div>
+          <button
+            class="btn btn-lg btn-primary btn-block"
+            (click)="login(form)"
+          >
+            Login
+          </button>
         </form>
       </div>
     </div>
