create profile page and admin interface

--- a/Frontend/parth-traders/src/app/admin/header/header.component.html
+++ b/Frontend/parth-traders/src/app/admin/header/header.component.html
@@ -49,7 +49,7 @@
       </li>
     </ul>
     <button mat-button [matMenuTriggerFor]="belowMenu">
-      <mat-icon>account_circle</mat-icon>admin name
+      <mat-icon>account_circle</mat-icon>{{ adminName }}
     </button>
     <mat-menu #belowMenu="matMenu" yPosition="below">
       <button mat-menu-item>
