--- a/Frontend/parth-traders/src/app/admin/profile/profile.component.html
+++ b/Frontend/parth-traders/src/app/admin/profile/profile.component.html
@@ -1,1 +1,105 @@
-<p>profile works!</p>
+<div class="modal-container">
+  <div class="row justify-content-around">
+    <div class="col-7 col-md-10">
+      <div class="row">
+        <div class="col-12 col-md-12">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h3 class="panel-title">Profile</h3>
+            </div>
+            <div class="panel-body">
+              <form #form="ngForm">
+                <div class="form-group">
+                  <label for="firstname">First Name:</label>
+                  <input
+                    class="form-control"
+                    placeholder="First Name"
+                    name="firstname"
+                    type="text"
+                    autofocus
+                    [(ngModel)]="admin.firstName"
+                  />
+                </div>
+                <div class="form-group">
+                  <label for="lastname">Last Name:</label>
+                  <input
+                    class="form-control"
+                    placeholder="Last Name"
+                    name="lastname"
+                    type="text"
+                    autofocus
+                    [(ngModel)]="admin.lastName"
+                  />
+                </div>
+                <div class="form-group">
+                  <label for="email">Email:</label>
+                  <input
+                    class="form-control"
+                    placeholder="Email"
+                    name="email"
+                    type="email"
+                    autofocus
+                    [(ngModel)]="admin.email"
+                  />
+                </div>
+                <div class="form-group">
+                  <label for="phonenumber">Phone Number:</label>
+                  <input
+                    class="form-control"
+                    placeholder="Phone Number"
+                    name="phonenumber"
+                    type="tel"
+                    placeholder="12345-67890"
+                    pattern="[0-9]{5}-[0-9]{5}"
+                    required
+                    autofocus
+                    [(ngModel)]="admin.phone"
+                  />
+                </div>
+                <div class="form-group">
+                  <label for="username">UserName:</label>
+                  <input
+                    class="form-control"
+                    placeholder="User Name"
+                    name="username"
+                    type="text"
+                    autofocus
+                    [(ngModel)]="admin.userName"
+                  />
+                </div>
+                <div class="form-group">
+                  <label for="password">Password:</label>
+                  <input
+                    class="form-control"
+                    placeholder="Password"
+                    name="password"
+                    type="password"
+                    autofocus
+                    [(ngModel)]="admin.password"
+                  />
+                </div>
+                <div class="form-group">
+                  <label for="password">Confirm Password:</label>
+                  <input
+                    class="form-control"
+                    placeholder="Confirm Password"
+                    name="confirmPassword"
+                    type="password"
+                    autofocus
+                    [(ngModel)]="admin.confirmPassword ?? admin.password"
+                  />
+                </div>
+                <button
+                  class="btn btn-lg btn-primary btn-block mt-2"
+                  (click)="updateProfile(form)"
+                >
+                  Update Profile
+                </button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
