modify login api to return admin details in response and create a subject to pass this info

--- a/Frontend/parth-traders/src/app/admin/header/header.component.html
+++ b/Frontend/parth-traders/src/app/admin/header/header.component.html
@@ -53,7 +53,7 @@
     </button>
     <mat-menu #belowMenu="matMenu" yPosition="below">
       <button mat-menu-item>
-        <a class="dropdown-item" routerLink="home">Profile</a>
+        <a class="dropdown-item" routerLink="profile">Profile</a>
       </button>
       <button mat-menu-item (click)="logout()">
         <a class="dropdown-item">Logout</a>
