--- a/Frontend/parth-traders/src/app/admin/profile/profile.component.html
+++ b/Frontend/parth-traders/src/app/admin/profile/profile.component.html
@@ -53,7 +53,7 @@
                     pattern="[0-9]{5}-[0-9]{5}"
                     required
                     autofocus
-                    [(ngModel)]="admin.phone"
+                    [(ngModel)]="admin.phoneNumber"
                   />
                 </div>
                 <div class="form-group">
