--- a/Frontend/parth-traders/src/app/user/product/product.component.css
+++ b/Frontend/parth-traders/src/app/user/product/product.component.css
@@ -1,15 +1,46 @@
 .product {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: flex-end;
-  margin: 10px;
-  padding: 20px;
-  width: 100%;
-  max-height: 400px;
-  min-width: 100px;
   background-color: white;
   z-index: 1;
+  height: 420px;
+  min-height: 420px;
+  min-width: 300px;
+  width: 300px;
+  box-shadow: 0 4px 5px rgb(0 0 0 / 20%);
+  position: relative;
+  overflow: hidden;
+  border-radius: 3px;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.product__info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  gap: 0.2rem;
+  padding: 0.5rem 1rem 1rem;
+  letter-spacing: 0.5px;
+  height: 100px;
+  margin-bottom: 15px;
+  flex-wrap: nowrap;
+  align-content: stretch;
+}
+
+.truncate {
+  padding: 19px;
+  padding-bottom: 32px;
+  font-size: 1.2rem;
+  width: 17rem;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.product__info h6 {
+  margin-top: 0;
 }
 
 .product__rating {
@@ -17,7 +48,7 @@
 }
 
 .product > img {
-  max-height: 200px;
+  height: 200px;
   width: 100%;
   object-fit: contain;
   margin-bottom: 15px;
@@ -33,9 +64,4 @@
 
 .product__price {
   margin-top: 5px;
-}
-
-.product__info {
-  height: 100px;
-  margin-bottom: 15px;
 }
