--- a/Frontend/parth-traders/src/app/user/product/product.component.html
+++ b/Frontend/parth-traders/src/app/user/product/product.component.html
@@ -1,6 +1,6 @@
 <div class="product">
   <div class="product__info">
-    <p>{{ title }}</p>
+    <h6 class="truncate">{{ title }}</h6>
     <p class="product__price">
       <small>$</small>
       <strong>{{ price }}</strong>
