--- a/Frontend/parth-traders/src/app/user/home/home.component.html
+++ b/Frontend/parth-traders/src/app/user/home/home.component.html
@@ -6,7 +6,26 @@
       alt=""
     />
     <div class="home__row">
-      <app-product-list></app-product-list>
+      <div class="product-list-container">
+        <h4 class="list-title">Most Selling Products</h4>
+        <app-product-list></app-product-list>
+      </div>
+      <div class="product-list-container">
+        <h4 class="list-title">Most Selling Products</h4>
+        <app-product-list></app-product-list>
+      </div>
+      <div class="product-list-container">
+        <h4 class="list-title">Most Selling Products</h4>
+        <app-product-list></app-product-list>
+      </div>
+      <div class="product-list-container">
+        <h4 class="list-title">Most Selling Products</h4>
+        <app-product-list></app-product-list>
+      </div>
+      <div class="product-list-container">
+        <h4 class="list-title">Most Selling Products</h4>
+        <app-product-list></app-product-list>
+      </div>
     </div>
   </div>
 </div>
