--- a/Frontend/parth-traders/src/app/user/product/product.component.css
+++ b/Frontend/parth-traders/src/app/user/product/product.component.css
@@ -1,67 +1,677 @@
 .product {
-  display: flex;
-  flex-direction: column;
-  background-color: white;
-  z-index: 1;
-  height: 420px;
-  min-height: 420px;
-  min-width: 300px;
-  width: 300px;
-  box-shadow: 0 4px 5px rgb(0 0 0 / 20%);
-  position: relative;
-  overflow: hidden;
-  border-radius: 3px;
-  justify-content: space-between;
-  flex-wrap: wrap;
+    position: relative;
+    perspective: 800px;
+    width: 306px;
+    height: 471px;
+    transform-style: preserve-3d;
+    transition: transform 5s;
+    float: left;
+    margin-right: 23px;
+    -webkit-transition: width 500ms ease-in-out;
+    -moz-transition: width 500ms ease-in-out;
+    -ms-transition: width 500ms ease-in-out;
+    -o-transition: width 500ms ease-in-out;
+    transition: width 500ms ease-in-out;
 }
 
-.product__info {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  gap: 0.2rem;
-  padding: 0.5rem 1rem 1rem;
-  letter-spacing: 0.5px;
-  height: 100px;
-  margin-bottom: 15px;
-  flex-wrap: nowrap;
-  align-content: stretch;
+.product.large {
+    width: 639px;
+    margin-bottom: 25px;
+    overflow: hidden;
+    -webkit-transition: all 500ms ease-in-out;
+    -moz-transition: all 500ms ease-in-out;
+    -ms-transition: all 500ms ease-in-out;
+    -o-transition: all 500ms ease-in-out;
+    transition: all 500ms ease-in-out;
 }
 
-.truncate {
-  padding: 19px;
-  padding-bottom: 32px;
-  font-size: 1.2rem;
-  width: 17rem;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
+.product.large:hover {
+    box-shadow: 0px 5px 31px -1px rgba(0, 0, 0, 0.15);
 }
 
-.product__info h6 {
-  margin-top: 0;
+.info-large {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0px;
+    padding: 42px;
+    width: 245px;
+    height: 395px;
+    -webkit-transition: all 500ms ease-out;
+    -moz-transition: all 300ms ease-out;
+    -ms-transition: all 300ms ease-out;
+    -o-transition: all 300ms ease-out;
+    transition: all 300ms ease-out;
 }
 
-.product__rating {
-  display: flex;
+.large .info-large {
+    left: 310px;
+    -webkit-transition: all 300ms ease-out;
+    -moz-transition: all 300ms ease-out;
+    -ms-transition: all 300ms ease-out;
+    -o-transition: all 300ms ease-out;
+    transition: all 300ms ease-out;
 }
 
-.product > img {
-  height: 200px;
-  width: 100%;
-  object-fit: contain;
-  margin-bottom: 15px;
+.info-large h4 {
+    text-transform: uppercase;
+    font-size: 28px;
+    color: #000;
+    font-weight: 400;
+    padding: 0;
 }
 
-.product > button {
-  background: #f0c14b;
-  border: 1px solid;
-  margin-top: 10px;
-  border-color: #a88734 #9c7e31 #846a29;
-  color: #111;
+.info-large h3 {
+    letter-spacing: 1px;
+    color: #262626;
+    text-transform: uppercase;
+    font-size: 14px;
+    clear: left;
+    margin-top: 20px;
+    font-weight: 700;
+    margin-bottom: 3px;
 }
 
-.product__price {
-  margin-top: 5px;
+div.sku {
+    font-weight: 700;
+    color: #d0d0d0;
+    font-size: 12px;
+    padding-top: 11px;
+}
+
+div.sku strong {
+    color: #000;
+}
+
+.price-big {
+    font-size: 34px;
+    font-weight: 600;
+    color: #5ff7d2;
+    margin-top: 21px;
+}
+
+.price-big span {
+    color: #d0d0d0;
+    font-weight: 400;
+    text-decoration: line-through;
+}
+
+.colors-large {
+    margin-bottom: 38px;
+}
+
+.colors-large li {
+    float: left;
+    list-style: none;
+    margin-right: 7px;
+    width: 16px;
+    height: 16px;
+}
+
+.colors-large li a {
+    float: left;
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+}
+
+.colors-large li a:hover {
+    width: 19px;
+    height: 19px;
+    position: relative;
+    top: -1px;
+    left: -1px;
+}
+
+.sizes-large {}
+
+.sizes-large span {
+    font-weight: 600;
+    color: #b0b0b0;
+}
+
+.sizes-large span:hover {
+    color: #000;
+    cursor: pointer;
+}
+
+.add-cart-large {
+    border: 3px solid #000;
+    font-size: 17px;
+    background: #fff;
+    text-transform: uppercase;
+    font-weight: 700;
+    padding: 10px;
+    font-family: "Open Sans", sans-serif;
+    width: 246px;
+    margin-top: 38px;
+    -webkit-transition: all 200ms ease-out;
+    -moz-transition: all 200ms ease-out;
+    -ms-transition: all 200ms ease-out;
+    -o-transition: all 200ms ease-out;
+    transition: all 200ms ease-out;
+}
+
+.add-cart-large:hover {
+    color: #5ff7d2;
+    border-color: #5ff7d2;
+    -webkit-transition: all 200ms ease-out;
+    -moz-transition: all 200ms ease-out;
+    -ms-transition: all 200ms ease-out;
+    -o-transition: all 200ms ease-out;
+    transition: all 200ms ease-out;
+    cursor: pointer;
+}
+
+.make3D.animate .product-back,
+.make3D.animate .product-front,
+div.large .product-back {
+    top: 0px;
+    left: 0px;
+    -webkit-transition: all 100ms ease-out;
+    -moz-transition: all 100ms ease-out;
+    -o-transition: all 100ms ease-out;
+    transition: all 100ms ease-out;
+}
+
+.make3D {
+    width: 305px;
+    height: 470px;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    overflow: hidden;
+    transform-style: preserve-3d;
+    -webkit-transition: 100ms ease-out;
+    -moz-transition: 100ms ease-out;
+    -o-transition: 100ms ease-out;
+    transition: 100ms ease-out;
+}
+
+div.make3D.flip-10 {
+    -webkit-transform: rotateY(-10deg);
+    -moz-transform: rotateY(-10deg);
+    -o-transform: rotateY(-10deg);
+    transform: rotateY(-10deg);
+    transition: 50ms ease-out;
+}
+
+div.make3D.flip90 {
+    -webkit-transform: rotateY(90deg);
+    -moz-transform: rotateY(90deg);
+    -o-transform: rotateY(90deg);
+    transform: rotateY(90deg);
+    transition: 100ms ease-in;
+}
+
+div.make3D.flip190 {
+    -webkit-transform: rotateY(190deg);
+    -moz-transform: rotateY(190deg);
+    -o-transform: rotateY(190deg);
+    transform: rotateY(190deg);
+    transition: 100ms ease-out;
+}
+
+div.make3D.flip180 {
+    -webkit-transform: rotateY(180deg);
+    -moz-transform: rotateY(180deg);
+    -o-transform: rotateY(180deg);
+    transform: rotateY(180deg);
+    transition: 150ms ease-out;
+}
+
+.make3D.animate {
+    top: 5px;
+    left: 5px;
+    width: 315px;
+    height: 480px;
+    box-shadow: 0px 5px 31px -1px rgba(0, 0, 0, 0.15);
+    -webkit-transition: 100ms ease-out;
+    -moz-transition: 100ms ease-out;
+    -o-transition: 100ms ease-out;
+    transition: 100ms ease-out;
+}
+
+div.large .make3D {
+    top: 0;
+    left: 0;
+    width: 315px;
+    height: 480px;
+    -webkit-transition: 300ms ease-out;
+    -moz-transition: 300ms ease-out;
+    -o-transition: 300ms ease-out;
+    transition: 300ms ease-out;
+}
+
+.large div.make3D {
+    box-shadow: 0px 5px 31px -1px rgba(0, 0, 0, 0);
+}
+
+.product-front img {
+    width: 100%;
+}
+
+.product-front,
+.product-back {
+    width: 315px;
+    height: 480px;
+    background: #fff;
+    position: absolute;
+    left: -5px;
+    top: -5px;
+    -webkit-transition: all 100ms ease-out;
+    -moz-transition: all 100ms ease-out;
+    -o-transition: all 100ms ease-out;
+    transition: all 100ms ease-out;
+}
+
+div.floating-cart .product-front {
+    width: 100%;
+    top: 0;
+    left: 0;
+}
+
+div.shadow {
+    width: 335px;
+    height: 520px;
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 3;
+    display: none;
+    background: -webkit-linear-gradient(left, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.2));
+    background: -o-linear-gradient(right, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.2));
+    background: -moz-linear-gradient(right, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.2));
+    background: linear-gradient(to right, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.2));
+}
+
+.product-back div.shadow {
+    z-index: 10;
+    opacity: 1;
+    background: -webkit-linear-gradient(left, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.1));
+    background: -o-linear-gradient(right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.1));
+    background: -moz-linear-gradient(right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.1));
+    background: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.1));
+}
+
+.image_overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #5ff7d2;
+    opacity: 0;
+}
+
+.make3D.animate .image_overlay {
+    opacity: 0.7;
+    -webkit-transition: all 200ms ease-out;
+    -moz-transition: all 200ms ease-out;
+    -o-transition: all 200ms ease-out;
+    transition: all 200ms ease-out;
+}
+
+.add_to_cart {
+    position: absolute;
+    top: 80px;
+    left: 50%;
+    width: 152px;
+    font-size: 15px;
+    margin-left: -78px;
+    border: 2px solid #fff;
+    color: #fff;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 700;
+    padding: 10px 0;
+    opacity: 0;
+    -webkit-transition: all 200ms ease-out;
+    -moz-transition: all 200ms ease-out;
+    -o-transition: all 200ms ease-out;
+    transition: all 200ms ease-out;
+}
+
+.add_to_cart:hover {
+    background: #fff;
+    color: #5ff7d2;
+    cursor: pointer;
+
+}
+
+.make3D.animate .add_to_cart {
+    opacity: 1;
+    -webkit-transition: all 200ms ease-out;
+    -moz-transition: all 200ms ease-out;
+    -o-transition: all 200ms ease-out;
+    transition: all 200ms ease-out;
+}
+
+.view_gallery {
+    position: absolute;
+    top: 144px;
+    left: 50%;
+    width: 152px;
+    font-size: 15px;
+    margin-left: -78px;
+    border: 2px solid #fff;
+    color: #fff;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 700;
+    padding: 10px 0;
+    opacity: 0;
+    -webkit-transition: all 200ms ease-out;
+    -moz-transition: all 200ms ease-out;
+    -o-transition: all 200ms ease-out;
+    transition: all 200ms ease-out;
+}
+
+.view_gallery:hover {
+    background: #fff;
+    color: #5ff7d2;
+    cursor: pointer;
+
+}
+
+.make3D.animate .view_gallery {
+    opacity: 1;
+    -webkit-transition: all 200ms ease-out;
+    -moz-transition: all 200ms ease-out;
+    -o-transition: all 200ms ease-out;
+    transition: all 200ms ease-out;
+}
+
+.stats-container {
+    background: #fff;
+    position: absolute;
+    top: 382px;
+    left: 0;
+    width: 252px;
+    height: 300px;
+    padding: 24px 40px 35px 32px;
+    -webkit-transition: all 200ms ease-out;
+    -moz-transition: all 200ms ease-out;
+    -o-transition: all 200ms ease-out;
+    transition: all 200ms ease-out;
+}
+
+.make3D.animate .stats-container {
+    top: 265px;
+    -webkit-transition: all 200ms ease-out;
+    -moz-transition: all 200ms ease-out;
+    -o-transition: all 200ms ease-out;
+    transition: all 200ms ease-out;
+}
+
+.stats-container .product_name {
+    font-size: 15px;
+    color: #393c45;
+    font-weight: 700;
+}
+
+.stats-container p {
+    font-size: 15px;
+    color: #b1b1b3;
+    padding: 2px 0 20px 0;
+}
+
+.stats-container .product_price {
+    float: right;
+    color: #5ff7d2;
+    font-size: 22px;
+    font-weight: 600;
+}
+
+div.floating-cart .stats-container {
+    display: none;
+}
+
+.product-options {
+    padding: 0;
+}
+
+.product-options strong {
+    font-weight: 700;
+    color: #393c45;
+    font-size: 14px;
+}
+
+.product-options span {
+    color: #969699;
+    font-size: 14px;
+    display: block;
+    margin-bottom: 8px;
+}
+
+.product-back {
+    display: none;
+    transform: rotateY(180deg);
+}
+
+.carousel {
+    width: 315px;
+    height: 500px;
+    overflow: hidden;
+    position: relative;
+}
+
+.carousel ul {
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.carousel li {
+    width: 315px;
+    height: 500px;
+    float: left;
+    overflow: hidden;
+}
+
+.carousel img {
+    margin-top: -22px;
+    width: 110%;
+}
+
+.arrows-perspective {
+    width: 315px;
+    height: 55px;
+    position: absolute;
+    top: 218px;
+    transform-style: preserve-3d;
+    transition: transform 5s;
+    perspective: 335px;
+}
+
+.carouselPrev,
+.carouselNext {
+    width: 50px;
+    height: 55px;
+    background: #ccc;
+    position: absolute;
+    top: 0;
+    transition: all 200ms ease-out;
+    opacity: 0.9;
+    cursor: pointer;
+}
+
+.carouselNext {
+    top: 0;
+    right: -26px;
+    -webkit-transform: rotateY(-117deg);
+    -moz-transform: rotateY(-117deg);
+    -o-transform: rotateY(-117deg);
+    transform: rotateY(-117deg);
+    transition: all 200ms ease-out;
+
+}
+
+.carouselNext.visible {
+    right: 0;
+    opacity: 0.8;
+    background: #fff;
+    -webkit-transform: rotateY(0deg);
+    -moz-transform: rotateY(0deg);
+    -o-transform: rotateY(0deg);
+    transform: rotateY(0deg);
+    transition: all 200ms ease-out;
+}
+
+.carouselPrev {
+    left: -26px;
+    top: 0;
+    -webkit-transform: rotateY(117deg);
+    -moz-transform: rotateY(117deg);
+    -o-transform: rotateY(117deg);
+    transform: rotateY(117deg);
+    transition: all 200ms ease-out;
+
+}
+
+.carouselPrev.visible {
+    left: 0;
+    opacity: 0.8;
+    background: #fff;
+    -webkit-transform: rotateY(0deg);
+    -moz-transform: rotateY(0deg);
+    -o-transform: rotateY(0deg);
+    transform: rotateY(0deg);
+    transition: all 200ms ease-out;
+}
+
+.carousel .x,
+.carousel .y {
+    height: 2px;
+    width: 15px;
+    background: #5ff7d2;
+    position: absolute;
+    top: 31px;
+    left: 17px;
+    -ms-transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+
+.carousel .x {
+    -ms-transform: rotate(135deg);
+    -webkit-transform: rotate(135deg);
+    transform: rotate(135deg);
+    top: 21px;
+}
+
+.carousel .carouselNext .x {
+    -ms-transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+
+.carousel .carouselNext .y {
+    -ms-transform: rotate(135deg);
+    -webkit-transform: rotate(135deg);
+    transform: rotate(135deg);
+}
+
+.large div.flip-back {
+    display: none;
+}
+
+.flip-back {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+}
+
+.flip-back:hover .cx,
+.flip-back:hover .cy {
+    background: #979ca7;
+    -webkit-transition: all 250ms ease-in-out;
+    -moz-transition: all 250ms ease-in-out;
+    -ms-transition: all 250ms ease-in-out;
+    -o-transition: all 250ms ease-in-out;
+    transition: all 250ms ease-in-out;
+}
+
+.cx,
+.cy {
+    background: #d2d5dc;
+    position: absolute;
+    width: 0px;
+    top: 15px;
+    right: 15px;
+    height: 3px;
+    -webkit-transition: all 250ms ease-in-out;
+    -moz-transition: all 250ms ease-in-out;
+    -ms-transition: all 250ms ease-in-out;
+    -o-transition: all 250ms ease-in-out;
+    transition: all 250ms ease-in-out;
+}
+
+.cx.s1,
+.cy.s1 {
+    right: 0;
+    width: 30px;
+    -webkit-transition: all 100ms ease-out;
+    -moz-transition: all 100ms ease-out;
+    -ms-transition: all 100ms ease-out;
+    -o-transition: all 100ms ease-out;
+    transition: all 100ms ease-out;
+}
+
+.cy.s2 {
+    -ms-transform: rotate(50deg);
+    -webkit-transform: rotate(50deg);
+    transform: rotate(50deg);
+    -webkit-transition: all 100ms ease-out;
+    -moz-transition: all 100ms ease-out;
+    -ms-transition: all 100ms ease-out;
+    -o-transition: all 100ms ease-out;
+    transition: all 100ms ease-out;
+}
+
+.cy.s3 {
+    -ms-transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+    transform: rotate(45deg);
+    -webkit-transition: all 100ms ease-out;
+    -moz-transition: all 100ms ease-out;
+    -ms-transition: all 100ms ease-out;
+    -o-transition: all 100ms ease-out;
+    transition: all 100ms ease-out;
+}
+
+.cx.s1 {
+    right: 0;
+    width: 30px;
+    -webkit-transition: all 100ms ease-out;
+    -moz-transition: all 100ms ease-out;
+    -ms-transition: all 100ms ease-out;
+    -o-transition: all 100ms ease-out;
+    transition: all 100ms ease-out;
+}
+
+.cx.s2 {
+    -ms-transform: rotate(140deg);
+    -webkit-transform: rotate(140deg);
+    transform: rotate(140deg);
+    -webkit-transition: all 100ms ease-out;
+    -moz-transition: all 100ms ease-out;
+    -ms-transition: all 100ease-out;
+    -o-transition: all 100ms ease-out;
+    transition: all 100ms ease-out;
+}
+
+.cx.s3 {
+    -ms-transform: rotate(135deg);
+    -webkit-transform: rotate(135deg);
+    transform: rotate(135deg);
+    -webkit-transition: all 100ease-out;
+    -moz-transition: all 100ms ease-out;
+    -ms-transition: all 100ms ease-out;
+    -o-transition: all 100ms ease-out;
+    transition: all 100ms ease-out;
 }
